<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:background="@drawable/lined_border"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_notification_foreground"
            android:textSize="16dp"
            android:textColor="@android:color/black"/>
        <Switch
            android:id="@+id/setting_notification_foreground_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:background="@drawable/lined_border"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_notification_background"
            android:textSize="16dp"
            android:textColor="@android:color/black"/>
        <Switch
            android:id="@+id/setting_notification_background_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/setting_logout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="2dp"
            android:background="@drawable/lined_border"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_logout"
                android:textSize="16dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting_withdraw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="2dp"
            android:background="@drawable/lined_border"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_withdraw"
                android:textSize="16dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/setting_opensource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:text="@string/setting_opensource"/>
</LinearLayout>