<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- SPLASH SCREEN -->
    <LinearLayout
        android:id="@+id/splash_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/app_name"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/splash_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:visibility="visible">
                <TextView
                    android:id="@+id/splash_login_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="end"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp"
                    android:text="@string/splash_login_register"/>
                <EditText
                    android:id="@+id/splash_login_input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/splash_login_hint_id"/>
                <EditText
                    android:id="@+id/splash_login_input_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:lines="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/splash_login_hint_pw"/>
                <Button
                    android:id="@+id/splash_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/splash_login"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/splash_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/splash_register_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="end"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp"
                    android:text="@string/splash_register_login"/>
                <EditText
                    android:id="@+id/splash_register_input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/splash_register_hint_id"/>
                <EditText
                    android:id="@+id/splash_register_input_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/splash_register_hint_nickname"/>
                <EditText
                    android:id="@+id/splash_register_input_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:lines="1"
                    android:imeOptions="actionNext"
                    android:hint="@string/splash_register_hint_pw"/>
                <EditText
                    android:id="@+id/splash_register_input_pw_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:lines="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/splash_register_hint_pw_confirm"/>
                <Button
                    android:id="@+id/splash_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/splash_register"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout
        android:id="@+id/main_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/main_header_parent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/main_header_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"/>
            <RelativeLayout
                android:id="@+id/main_header_holder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_header_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="4dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/main_header_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:layout_toStartOf="@id/main_header_cash"
                    android:background="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/main_header_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/main_header_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="12sp"
                    android:textColor="@color/colorDarkGray"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDarkGray"/>
        <LinearLayout
            android:id="@+id/main_content_parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <android.support.v4.view.ViewPager
                android:id="@+id/main_content_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
        </LinearLayout>
        <devlight.io.library.ntb.NavigationTabBar
            android:id="@+id/main_content_footer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:ntb_badged="false"
            app:ntb_scaled="true"
            app:ntb_tinted="true"
            app:ntb_title_mode="all"
            app:ntb_titled="true"
            app:ntb_swiped="true"/>
    </LinearLayout>

    <!-- CHAT SCREEN -->
    <LinearLayout
        android:id="@+id/chat_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/chat_header_index"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/chat_header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/chat_header_leave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDarkGray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/chat_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDarkGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">
            <EditText
                android:id="@+id/chat_editor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/chat_send"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/chatting_send"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <!-- LOADER SCREEN -->
    <LinearLayout
        android:id="@+id/loader_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

</RelativeLayout>